Fix graph selectors on mobile

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -192,19 +192,6 @@ body {
     border-radius: 8px; /* Rounded corners */
 }
 
-.graphSelector {
-  position: absolute;
-  top: 20px;   /* distance from top */
-  right: 20px; /* distance from right */
-  display: flex;
-  gap: 5px;
-  z-index: 1; /* ensures controls sit above the graph */
-  background-color: white;
-  margin: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Light shadow for a cleaner look */
-  border-radius: 8px; /* Rounded corners */
-}
-
 .show {
     opacity: 1;
     transform: scale(1);
@@ -409,6 +396,44 @@ clear: both;
     transform: scale(1);
     visibility: visible;
   }
+
+ .graphSelector {
+  position: absolute;
+  top: 20px;   /* distance from top */
+  right: 20px; /* distance from right */
+  display: flex;
+  gap: 5px;
+  z-index: 1; /* ensures controls sit above the graph */
+  background-color: transparent;
+}
+
+.selectGraphButton {
+  padding: 10px 20px;
+  border: none;
+  background-color: rgb(85, 85, 255);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.selectGraphButton:hover {
+  background-color: rgb(45, 45, 255);
+}
+
+.noHover {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.left-select-button {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+}
+
+.right-select-button {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
 
 .addApplianceButton {
   background-color: #3D48BF;
@@ -631,9 +656,13 @@ clear: both;
     }
 
     .floatingControls {
-        display: block;
+        display: inline-flex;
+        flex-direction: column;
         visibility: visible;
         position: fixed;
+        row-gap: 10px;
+        justify-content: center;
+        align-items: center;
         opacity: 95%;
         bottom: 25px;
         right: 25px;
@@ -642,7 +671,15 @@ clear: both;
         border: 1px solid #ccc;
         border-radius: 12px;
         box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-        z-index: 1000; /* Makes sure it stays on top */
+        z-index: 1; /* Makes sure it stays on top */
+    }
+
+     .graphSelector {
+      position: static;
+      display: flex;
+      gap: 5px;
+      background-color: transparent;
+      z-index: 2;
     }
 
     .navGrid {
